# zimi

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/core/: settings.py  urls.py
backend/schedule/: models.py
backend/schedule/migrations/: 0001_initial.py
fronend/: README.md
