[tool.poetry]
name = "zimi"
version = "0.1.0"
description = ""
authors = ["Camila Arancibia <camila.arancibiaf@sansano.usm.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[tool.poetry.group.format.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.linter.dependencies]
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
